--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mui/material": "^5.14.16",
     "@react-three/drei": "^9.66.1",
     "@react-three/fiber": "^8.13.0",
     "@types/node": "18.16.2",
