--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
+    "aws-sdk": "^2.1488.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "mongoose": "^8.0.0",
     "next": "13.3.1",
+    "openai": "^4.15.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
