--- a/package.json
+++ b/package.json
@@ -32,11 +32,13 @@
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
+    "react-syntax-highlighter": "^15.5.0",
     "tailwindcss": "3.3.2",
     "three": "^0.152.1",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "@types/react-syntax-highlighter": "^15.5.10",
     "@types/three": "^0.150.2"
   }
 }
