--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "classnames": "^2.3.2",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
+    "firebase": "^10.5.2",
+    "firebaseui": "^6.1.0",
     "mongoose": "^8.0.0",
     "next": "13.3.1",
     "openai": "^4.15.2",
