--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "@types/react": "18.2.0",
     "@types/react-dom": "18.2.1",
     "autoprefixer": "10.4.14",
-    "aws-sdk": "^2.1488.0",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "eslint": "8.39.0",
@@ -32,6 +31,7 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-markdown": "^8.0.7",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
