--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "predeploy": "next build",
+    "deploy": "firebase deploy",
     "start": "next start",
     "lint": "next lint"
   },
