--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -15,6 +15,6 @@ jobs:
       - uses: FirebaseExtended/action-hosting-deploy@v0
         with:
           repoToken: '${{ secrets.GITHUB_TOKEN }}'
-          firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615 }}'
+          firebaseServiceAccountJson: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615 }}'
           channelId: live
           projectId: doc-genie-6b615
