--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -6,6 +6,9 @@ name: Deploy to Firebase Hosting on merge
   push:
     branches:
       - main
+env:
+  NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
+  FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615 }}
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
