enable webframeworks experiment in github workflow

--- a/.github/workflows/firebase-hosting-pull-request.yml
+++ b/.github/workflows/firebase-hosting-pull-request.yml
@@ -6,6 +6,7 @@ name: Deploy to Firebase Hosting on PR
 env:
   NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
   FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615 }}
+  FIREBASE_CLI_EXPERIMENTS: webframeworks
 jobs:
   build_and_preview:
     if: '${{ github.event.pull_request.head.repo.full_name == github.repository }}'
