--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -9,6 +9,7 @@ name: Deploy to Firebase Hosting on merge
 env:
   NEXT_PUBLIC_FIREBASE_API_KEY: ${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }}
   FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_DOC_GENIE_6B615 }}
+  FIREBASE_CLI_EXPERIMENTS: webframeworks
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
