migrate to openrouter for AI generations

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-OPENAI_API_KEY=*replace me*
+OPENROUTER_API_KEY=*replace me*
 MONGODB_URI=*replace me*
 FIREBASE_API_KEY=*replace me*
 FIREBASE_AUTH_DOMAIN=*replace me*
