--- a/package.json
+++ b/package.json
@@ -34,9 +34,10 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
-    "react-markdown": "^8.0.7",
+    "react-markdown": "^10.1.0",
     "react-query": "^3.39.3",
     "react-syntax-highlighter": "^15.5.0",
+    "remark-gfm": "^4.0.1",
     "tailwindcss": "3.3.2",
     "three": "^0.152.1",
     "typescript": "5.0.4"
