--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "predeploy": "next build",
     "deploy": "firebase deploy",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
     "@emotion/react": "^11.11.1",
@@ -40,10 +42,20 @@
     "remark-gfm": "^4.0.1",
     "tailwindcss": "3.3.2",
     "three": "^0.152.1",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "zod": "^3.25.51"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "@types/react-syntax-highlighter": "^15.5.10",
-    "@types/three": "^0.150.2"
+    "@types/supertest": "^6.0.3",
+    "@types/three": "^0.150.2",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
+    "node-mocks-http": "^1.17.2",
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4"
   }
 }
