--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "firebase": "^10.5.2",
+    "firebase-admin": "^13.4.0",
     "firebaseui": "^6.1.0",
     "mongoose": "^8.0.0",
     "next": "13.3.1",
