--- a/firebase.json
+++ b/firebase.json
@@ -1,13 +1,15 @@
 {
   "hosting": {
     "source": ".",
-    "ignore": [
-      "firebase.json",
-      "**/.*",
-      "**/node_modules/**"
-    ],
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
     "frameworksBackend": {
-      "region": "us-central1"
+      "region": "us-central1",
+      "env": {
+        "MONGODB_URI": "${MONGODB_URI}",
+        "OPENROUTER_API_KEY": "${OPENROUTER_API_KEY}",
+        "OPENROUTER_HTTP_REFERER": "https://doc-genie.vercel.app",
+        "OPENROUTER_X_TITLE": "Doc-Genie"
+      }
     }
   }
 }
