--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "date-fns-tz": "^3.2.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.1",
     "firebase": "^10.5.2",
